--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+@font-face {
+    font-family: 'fontello';
+    src: url('./assets/font/fontello.eot?48357753');
+    src: url('./assets/font/fontello.eot') format('embedded-opentype'),
+    url('./assets/font/fontello.woff?48357753') format('woff'),
+    url('./assets/font/fontello.ttf?48357753') format('truetype'),
+    url('./assets/font/fontello.svg?48357753#fontello') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-wrapper {
+    background-color: #e5e5e5;
+    width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-areas: 'header header' 'navbar content';
+    grid-template-rows: 100px 1fr;
+    grid-template-columns: 3fr 12fr;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-wrapper-Content {
+    background-color: #e5e5e5;
+    grid-area: content;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.demoIcon {
+    font-family: "fontello";
+    font-style: normal;
+    font-weight: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    margin-right: .2em;
+    margin-left: .2em;
+    font-size: 30px;
+    color: #636363;
+    cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.demoIcon:hover {
+    transition: all ease .3s;
+    color: #2c2f3b;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.demoIcon_white {
+    color: #fff;
 }
+
+.demoIcon_white:hover {
+    color: #fff;
+}
+
+
+
+
+
+
