--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,30 +1,35 @@
 .nav {
-    background-color: #2c2f3b;
-    grid-area: navbar;
-    text-decoration: none;
+  background-color: #2c2f3b;
+  grid-area: navbar;
+  text-decoration: none;
+  margin: 0 10px;
+  border-radius: 10px;
+  height: 50vh;
 }
-
-.link {
-    padding: 20px 0 20px 10px;
-    color: white;
-    text-decoration: none;
-    display: block;
+.nav .link {
+  padding: 20px 0 20px 10px;
+  color: white;
+  text-decoration: none;
+  display: block;
+  transition: all ease 0.3s;
 }
-
-.link:hover {
-    background-color: #292932;
+.nav .link:first-child {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
-
+.nav .link:last-child {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.nav .link:hover {
+  background-color: #292932;
+}
+.nav .link .nameLink {
+  padding-left: 25px;
+}
 
 .link.activeLink {
-    background-color: #292932;
+  background-color: #292932;
 }
 
-.nameLink {
-    padding-left: 25px;
-}
-
-
-
-
-
+/*# sourceMappingURL=Navbar.module.css.map */
