--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -6,7 +6,7 @@
     border-radius: 10px;
     background-color: white;
     box-shadow: 3px 3px 5px 0 rgba(161, 161, 161, 1);
-    margin: 10px;
+    margin: 0 10px;
     padding: 30px 10px;
 }
 
