--- a/src/components/Users/users.module.scss
+++ b/src/components/Users/users.module.scss
@@ -13,20 +13,18 @@
   border-radius: 10px;
   background-color: white;
   box-shadow: 3px 3px 5px 0 rgba(161, 161, 161, 1);
-  margin: 10px;
-  padding: 30px 10px;
+  margin: 0 15px 20px;
+  padding: 15px 50px;
   align-items: center;
   justify-content: space-between;
 
-  &_photo {
-    margin-left: 25px;
-  }
-
   &Info {
-    padding: 0 35px;
+    text-align: center;
+    padding-top: 10px;
   }
 
   &Button {
+    width: 100px;
     cursor: pointer;
     border: 1px solid #2c2f3b;
     box-sizing: border-box;
@@ -35,10 +33,10 @@
     color: #2c2f3b;
     display: inline-block;
     user-select: none;
+    transition: all ease .3s;
 
     &:hover {
       background-color: #2c2f3b;
-      transition: all ease .3s;
       color: #fff;
     }
   }
