--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -23,3 +23,10 @@
     display: flex;
     margin-left: 10px;
 }
+
+.button {
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+    margin-left: 15px;
+}
