--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,48 +1,59 @@
-header {
-  background-color: #2c2f3b;
-  grid-area: header;
-  border-radius: 10px;
-  margin: 15px 10px;
+.header {
+  background-color: #fff;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  z-index: 9;
+  height: 80px;
+  width: 100%;
+  border-bottom: 1px solid #e7edf2;
+  box-sizing: border-box;
 }
-header .name {
+@media (max-width: 768.999px) {
+  .header {
+    justify-content: space-between;
+  }
+}
+.header .name {
   min-width: 150px;
   cursor: pointer;
-  color: white;
+  color: #29292d;
   margin-right: 50px;
-  padding: 24px;
-  transition: all ease .3s;
+  padding: 29px;
+  transition: all ease 0.3s;
   position: relative;
 }
-header .name:hover {
-  background-color: #292932;
+.header .name:hover {
+  color: #6f42c1;
 }
-
-.header img {
-  width: 20px;
+@media (max-width: 768.999px) {
+  .header .name {
+    margin-right: 0;
+  }
 }
 
 .dropList {
   transform: scaleY(0);
   transform-origin: 0 0;
-  transition: .3s ease;
+  transition: 0.3s ease;
   overflow: hidden;
   position: absolute;
   top: 100%;
-  left: 0;
+  left: -2px;
   width: 100%;
+  height: 150px;
   cursor: auto;
-  background-color: #2c2f3b;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  border: 1px solid #e7edf2;
+  background-color: #fff;
+  box-shadow: 3px 3px 5px 0 #a1a1a1;
 }
 
 .dropList div {
   cursor: pointer;
   width: 100%;
-  transition: all ease .3s;
+  transition: all ease 0.3s;
   padding: 20px 24px;
   box-sizing: border-box;
   margin: 10px 0;
@@ -56,17 +67,15 @@ header .name:hover {
 
 .dropList div:hover {
   background-color: #292932;
-
 }
 
 .name:hover .dropList {
   overflow: visible;
   transform: scaleY(1);
-
 }
 
 .arrow {
-  border: solid #fff;
+  border: solid #000;
   border-width: 0 1px 1px 0;
   display: inline-block;
   padding: 3px;
@@ -76,14 +85,27 @@ header .name:hover {
   bottom: 3px;
 }
 
+.menu-mobile {
+  display: none;
+  padding: 29px;
+  margin-left: 25px;
+}
+@media (max-width: 768.999px) {
+  .menu-mobile {
+    display: block;
+  }
+}
 
+.qwe {
+  width: 25px;
+  height: 3px;
+  background-color: #29292d;
+  margin-bottom: 5px;
+  display: block;
+}
 
-
-
-
-
-
-
-
+.active {
+  display: block;
+}
 
 /*# sourceMappingURL=header.module.css.map */
