--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,17 +1,33 @@
 .nav {
-  background-color: #2c2f3b;
-  grid-area: navbar;
-  text-decoration: none;
-  margin: 0 10px;
-  border-radius: 10px;
-  height: 50vh;
+  transition: all ease 0.3s;
+}
+@media (max-width: 768.999px) {
+  .nav {
+    display: none;
+  }
+}
+.nav-content {
+  background-color: #f8f9fb;
+  height: 100vh;
+  width: 80px;
+  padding-top: 25px;
+  border-right: 1px solid #e7edf2;
+  position: fixed;
+  left: 0;
+  z-index: 1;
 }
 .nav .link {
-  padding: 20px 0 20px 10px;
+  padding: 20px 0 20px;
   color: white;
   text-decoration: none;
   display: block;
   transition: all ease 0.3s;
+}
+.nav .link-logo-name svg {
+  display: flex;
+  justify-content: center;
+  width: 30px;
+  margin: 0 auto;
 }
 .nav .link:first-child {
   border-top-left-radius: 10px;
@@ -22,14 +38,11 @@
   border-bottom-right-radius: 10px;
 }
 .nav .link:hover {
-  background-color: #292932;
-}
-.nav .link .nameLink {
-  padding-left: 25px;
+  fill: #6f42c1;
 }
 
-.link.activeLink {
-  background-color: #292932;
+.active {
+  display: block;
 }
 
 /*# sourceMappingURL=Navbar.module.css.map */
