--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,35 +1,57 @@
 .nav {
-  background-color: #2c2f3b;
-  grid-area: navbar;
-  text-decoration: none;
-  margin: 0 10px;
-  border-radius: 10px;
-  height: 50vh;
+  transition: all ease .3s;
+  @media (max-width: 768.999px) {
+    display:none
+  }
+
+  &-content{
+    background-color: #f8f9fb;
+    height: 100vh;
+    width: 80px;
+    padding-top: 25px;
+    border-right: 1px solid #e7edf2;
+    position: fixed;
+    left: 0;
+    z-index: 1;
+  }
+
   .link {
-    padding: 20px 0 20px 10px;
+    padding: 20px 0 20px;
     color: white;
     text-decoration: none;
     display: block;
     transition: all ease .3s;
 
+    &-logo-name {
+      svg {
+        display: flex;
+        justify-content: center;
+        width: 30px;
+        margin: 0 auto;
+      }
+    }
+
     &:first-child {
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
     }
+
     &:last-child {
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
     }
-    &:hover {
-      background-color: #292932;
-    }
 
-    .nameLink {
-      padding-left: 25px;
+    &:hover {
+        fill: #6f42c1;
     }
   }
 }
 
-.link.activeLink {
-  background-color: #292932;
+.active {
+  display: block;
+
+  .nav{
+
+  }
 }
+
