--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,78 +1,108 @@
-.postsBlock {
-    padding: 10px;
+.content {
+  border-right: 1px solid #e7edf2;
+  border-left: 1px solid #e7edf2;
+  width: 50%;
+}
+@media (max-width: 990.999px) {
+  .content {
+    width: 80%;
+    border-right: none;
+    border-left: none;
+    margin-left: 80px;
+  }
 }
 
-.posts {
-    margin-top: 10px;
+.connections {
+  max-width: 240px;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-top: 20px;
+  position: relative;
 }
-
-.border {
-    border: 1px solid #cccccc;
-    border-radius: 10px;
-    background-color: white;
-    -webkit-box-shadow: 3px 3px 5px 0px rgba(161,161,161,1);
-    -moz-box-shadow: 3px 3px 5px 0px rgba(161,161,161,1);
-    box-shadow: 3px 3px 5px 0px rgba(161,161,161,1);
+@media (max-width: 990.999px) {
+  .connections {
+    display: none;
+  }
+}
+.connections:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 90%;
+  height: 1px;
+  margin: 0 auto;
+  background-color: #e7edf2;
+}
+.connections-count {
+  font-size: 20px;
+  color: #838daa;
+  text-align: center;
+  font-weight: lighter;
+  line-height: 1.75;
+}
+.connections-count__purple {
+  color: #6f42c1;
+  font-size: 24px;
+  font-weight: 600;
 }
 
 .form {
-    position: relative;
-    margin: 30px 0;
-    display: flex;
-    padding-left: 30px;
+  position: relative;
+  margin: 30px 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
-
-.newPost {
-    font-size: 16px;
-    padding: 10px;
-    display: block;
-    width: 700px;
-    border: none;
-    border-bottom: 1px solid #ccc;
+.form .newPost {
+  font-size: 16px;
+  display: block;
+  max-width: 100%;
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #ccc;
 }
-
-.newPost:focus {
-    outline: none;
+.form .newPost:focus {
+  outline: none;
 }
-
-.bar {
-    position: absolute;
-    display: block;
-    width: 720px;
+.form .bar {
+  position: absolute;
+  display: block;
+  width: 90%;
 }
-
-.bar:before, .bar:after {
-    content: "";
-    height: 2px;
-    width: 0;
-    bottom: -1px;
-    position: absolute;
-    background: #292932;
-    transition: 0.3s ease all;
-    -moz-transition: 0.3s ease all;
-    -webkit-transition: 0.3s ease all;
+.form .bar:before, .form .bar:after {
+  content: "";
+  height: 2px;
+  width: 0;
+  bottom: -1px;
+  position: absolute;
+  background: #292932;
+  transition: 0.3s ease all;
+  -moz-transition: 0.3s ease all;
+  -webkit-transition: 0.3s ease all;
 }
-
-.bar:before {
-    left: 50%;
+.form .bar:before {
+  left: 50%;
 }
-
-.bar:after {
-    right: 50%;
+.form .bar:after {
+  right: 50%;
+}
+.form .button {
+  border: none;
+  background-color: #fff;
+  cursor: pointer;
+  margin-left: 15px;
+}
+.form .button:active, .form .button:focus {
+  outline: none;
 }
 
 .newPost:focus ~ .bar:before,
 .newPost:focus ~ .bar:after {
-    width: 50%;
+  width: 50%;
 }
 
-.button {
-    border: none;
-    background-color: #fff;
-    cursor: pointer;
-    margin-left: 15px;
-}
-
-.button:active, .button:focus {
-    outline: none;
-}
+/*# sourceMappingURL=MyPosts.module.css.map */
