--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #e5e5e5;
+  position: relative;
 }
 
 code {
@@ -17,4 +17,9 @@ a {
   text-decoration: none;
   border: none;
   color: #fff;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
