add information about user, and change info about yourself

--- a/src/components/Profile/ProfileHeader/ProfileHeader.module.css
+++ b/src/components/Profile/ProfileHeader/ProfileHeader.module.css
@@ -107,4 +107,8 @@
   background-position: center;
 }
 
-/*# sourceMappingURL=ProfileInfo.module.css.map */
+.change-photo {
+  display: none;
+}
+
+/*# sourceMappingURL=ProfileHeader.module.css.map */
