--- a/src/components/Users/users.module.scss
+++ b/src/components/Users/users.module.scss
@@ -9,14 +9,17 @@
 }
 
 .user {
+  width: 300px;
+
   border: 1px solid #cccccc;
   border-radius: 10px;
+
   background-color: white;
-  box-shadow: 3px 3px 5px 0 rgba(161, 161, 161, 1);
   margin: 0 15px 20px;
   padding: 15px 50px;
   align-items: center;
   justify-content: space-between;
+  box-sizing: border-box;
 
   &Info {
     text-align: center;
@@ -41,12 +44,17 @@
       color: #fff;
     }
   }
+
+  &-container {
+    margin: 0 auto;
+    width: 750px;
+  }
 }
 
 .flex {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
 }
 
 
