--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -89,23 +89,152 @@
   display: none;
   padding: 29px;
   margin-left: 25px;
+  flex-direction: column;
+  height: 20px;
+  justify-content: space-between;
 }
 @media (max-width: 768.999px) {
   .menu-mobile {
-    display: block;
+    display: flex;
   }
 }
 
-.qwe {
-  width: 25px;
+.active :nth-child(1) {
+  transform: rotate(-45deg) translate(-3px, 7px);
+}
+.active :nth-child(2) {
+  opacity: 0;
+}
+.active :nth-child(3) {
+  transform: rotate(45deg) translate(3px, -2px);
+}
+
+.solid {
+  width: 30px;
   height: 3px;
   background-color: #29292d;
-  margin-bottom: 5px;
   display: block;
+  transition: all ease 0.5s;
 }
 
 .active {
   display: block;
+}
+
+.burger-menu {
+  display: none;
+}
+@media (max-width: 768.999px) {
+  .burger-menu {
+    display: block;
+    position: relative;
+    width: 140px;
+    height: 30px;
+    color: #60635E;
+    text-transform: uppercase;
+  }
+}
+
+.burger-click-region {
+  position: absolute;
+  left: 30px;
+  width: 40px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.burger-menu-txt {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 5px;
+  cursor: default;
+  transition: opacity 200ms ease-out, transform 200ms cubic-bezier(0.34, 0.55, 0.25, 0.83);
+}
+.is-open .burger-menu-txt {
+  opacity: 0;
+  transform: translate3d(-50px, 0, 0);
+}
+
+.burger-menu-piece {
+  display: block;
+  position: absolute;
+  width: 40px;
+  border-top: 6px solid #C2C2C2;
+  transform-origin: 50% 50%;
+  transition: transform 400ms ease-out;
+}
+.burger-menu-piece:nth-child(1) {
+  top: 0;
+}
+.burger-menu-piece:nth-child(2) {
+  top: 12px;
+  opacity: 1;
+  transition: transform 400ms ease-out, opacity 0ms linear 200ms;
+}
+.burger-menu-piece:nth-child(3) {
+  top: 24px;
+}
+.active .burger-menu-piece:nth-child(1) {
+  animation: burger-open-top 400ms ease-out forwards;
+}
+.active .burger-menu-piece:nth-child(2) {
+  opacity: 0;
+  transition: transform 400ms ease-out, opacity 0ms linear 200ms;
+}
+.active .burger-menu-piece:nth-child(3) {
+  animation: burger-open-bot 400ms ease-out forwards;
+}
+.closing .burger-menu-piece:nth-child(1) {
+  animation: burger-close-top 400ms ease-out forwards;
+}
+.closing .burger-menu-piece:nth-child(3) {
+  animation: burger-close-bot 400ms ease-out forwards;
+}
+
+@keyframes burger-open-top {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  50% {
+    transform: translate3d(0, 12px, 0);
+  }
+  100% {
+    transform: translate3d(0, 12px, 0) rotate(45deg);
+  }
+}
+@keyframes burger-open-bot {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  50% {
+    transform: translate3d(0, -12px, 0);
+  }
+  100% {
+    transform: translate3d(0, -12px, 0) rotate(-45deg);
+  }
+}
+@keyframes burger-close-top {
+  0% {
+    transform: translate3d(0, 12px, 0) rotate(45deg);
+  }
+  50% {
+    transform: translate3d(0, 12px, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+@keyframes burger-close-bot {
+  0% {
+    transform: translate3d(0, -12px, 0) rotate(-45deg);
+  }
+  50% {
+    transform: translate3d(0, -12px, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 /*# sourceMappingURL=header.module.css.map */
