--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -21,9 +21,11 @@
     padding: 29px;
     transition: all ease .3s;
     position: relative;
+
     &:hover {
       color: #6f42c1;
     }
+
     @media (max-width: 768.999px) {
       margin-right: 0;
     }
@@ -89,19 +91,171 @@
   display: none;
   padding: 29px;
   margin-left: 25px;
+  flex-direction: column;
+  height: 20px;
+  justify-content: space-between;
   @media (max-width: 768.999px) {
-    display: block;
+    display: flex;
   }
 }
 
-.qwe {
-  width: 25px;
+.active {
+  :nth-child(1) {
+    transform: rotate(-45deg) translate(-3px, 7px);
+  }
+
+  :nth-child(2) {
+    opacity: 0
+  }
+
+  :nth-child(3) {
+    transform: rotate(45deg) translate(3px, -2px);
+  }
+}
+.solid {
+  width: 30px;
   height: 3px;
   background-color: #29292d;
-  margin-bottom: 5px;
   display: block;
+  transition: all ease .5s;
 }
 
 .active {
   display: block;
+}
+
+
+.burger-menu {
+  display: none;
+
+  @media (max-width: 768.999px) {
+    display: block;
+    position: relative;
+    width: 140px;
+    height: 30px;
+    color: #60635E;
+    text-transform: uppercase;
+  }
+}
+
+.burger-click-region {
+  position: absolute;
+  left: 30px;
+  width: 40px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.burger-menu-txt {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 5px;
+  cursor: default;
+  transition: opacity 200ms ease-out, transform 200ms cubic-bezier(.34, .55, .25, .83);
+
+  .is-open & {
+    opacity: 0;
+    transform: translate3d(-50px, 0, 0);
+  }
+}
+
+$menu-animation-duration: 400ms;
+$menu-animation-timing:   ease-out;
+
+.burger-menu-piece {
+  display: block;
+  position: absolute;
+  width: 40px;
+  border-top: 6px solid #C2C2C2;
+  transform-origin: 50% 50%;
+  transition: transform $menu-animation-duration $menu-animation-timing;
+
+  &:nth-child(1) {
+    top: 0;
+  }
+
+  &:nth-child(2) {
+    top: 12px;
+    opacity: 1;
+    transition: transform $menu-animation-duration $menu-animation-timing, opacity 0ms linear $menu-animation-duration / 2;
+  }
+
+  &:nth-child(3) {
+    top: 24px;
+  }
+
+  .active & {
+
+    &:nth-child(1) {
+      animation: burger-open-top $menu-animation-duration $menu-animation-timing forwards;
+    }
+
+    &:nth-child(2) {
+      opacity: 0;
+      transition: transform $menu-animation-duration $menu-animation-timing, opacity 0ms linear $menu-animation-duration / 2;
+    }
+
+    &:nth-child(3) {
+      animation: burger-open-bot $menu-animation-duration $menu-animation-timing forwards;
+    }
+  }
+
+  .closing & {
+    &:nth-child(1) {
+      animation: burger-close-top $menu-animation-duration $menu-animation-timing forwards;
+    }
+
+    &:nth-child(3) {
+      animation: burger-close-bot $menu-animation-duration $menu-animation-timing forwards;
+    }
+  }
+}
+
+@keyframes burger-open-top {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  50% {
+    transform: translate3d(0, 12px, 0);
+  }
+  100% {
+    transform: translate3d(0, 12px, 0) rotate(45deg);
+  }
+}
+
+@keyframes burger-open-bot {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  50% {
+    transform: translate3d(0, -12px, 0);
+  }
+  100% {
+    transform: translate3d(0, -12px, 0) rotate(-45deg);
+  }
+}
+
+@keyframes burger-close-top {
+  0% {
+    transform: translate3d(0, 12px, 0) rotate(45deg);
+  }
+  50% {
+    transform: translate3d(0, 12px, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes burger-close-bot {
+  0% {
+    transform: translate3d(0, -12px, 0) rotate(-45deg);
+  }
+  50% {
+    transform: translate3d(0, -12px, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
 }
