--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,27 +1,35 @@
 .nav {
   transition: all ease 0.3s;
+  position: fixed;
+  left: 0;
+  z-index: 2;
 }
 @media (max-width: 768.999px) {
   .nav {
-    display: none;
+    left: -100%;
   }
 }
 .nav-content {
   background-color: #f8f9fb;
   height: 100vh;
   width: 80px;
-  padding-top: 25px;
   border-right: 1px solid #e7edf2;
-  position: fixed;
-  left: 0;
-  z-index: 1;
+}
+@media (max-width: 768.999px) {
+  .nav-content {
+    width: 250px;
+  }
 }
 .nav .link {
   padding: 20px 0 20px;
   color: white;
   text-decoration: none;
-  display: block;
+  display: flex;
+  align-items: center;
   transition: all ease 0.3s;
+}
+.nav .link-logo-name {
+  width: 45%;
 }
 .nav .link-logo-name svg {
   display: flex;
@@ -40,9 +48,20 @@
 .nav .link:hover {
   fill: #6f42c1;
 }
+.nav .link-name {
+  display: none;
+}
+@media (max-width: 768.999px) {
+  .nav .link-name {
+    width: 35%;
+    display: block;
+    text-align: left;
+    color: #2c2f3b;
+  }
+}
 
 .active {
-  display: block;
+  left: 0;
 }
 
 /*# sourceMappingURL=Navbar.module.css.map */
