--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,28 +1,33 @@
 .nav {
   transition: all ease .3s;
+  position: fixed;
+  left: 0;
+  z-index: 2;
   @media (max-width: 768.999px) {
-    display:none
+    left: -100%;
   }
 
-  &-content{
+  &-content {
     background-color: #f8f9fb;
     height: 100vh;
     width: 80px;
-    padding-top: 25px;
     border-right: 1px solid #e7edf2;
-    position: fixed;
-    left: 0;
-    z-index: 1;
+
+    @media (max-width: 768.999px) {
+      width: 250px;
+    }
   }
 
   .link {
     padding: 20px 0 20px;
     color: white;
     text-decoration: none;
-    display: block;
+    display: flex;
+    align-items: center;
     transition: all ease .3s;
 
     &-logo-name {
+      width: 45%;
       svg {
         display: flex;
         justify-content: center;
@@ -42,16 +47,23 @@
     }
 
     &:hover {
-        fill: #6f42c1;
+      fill: #6f42c1;
+    }
+
+    &-name {
+      display: none;
+
+      @media (max-width: 768.999px) {
+        width: 35%;
+        display: block;
+        text-align: left;
+        color: #2c2f3b;
+      }
     }
   }
 }
 
 .active {
-  display: block;
-
-  .nav{
-
-  }
+  left: 0;
 }
 
