--- a/src/components/Profile/ProfileInformation/ProfileInformation.module.scss
+++ b/src/components/Profile/ProfileInformation/ProfileInformation.module.scss
@@ -9,6 +9,11 @@
     border-left: none;
     margin-left: 80px;
   }
+
+  @media (max-width: 768.999px) {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 .connections {
