--- a/src/components/Profile/ProfileInformation/Setting/Setting.module.css
+++ b/src/components/Profile/ProfileInformation/Setting/Setting.module.css
@@ -7,6 +7,26 @@
     font-size: 15px;
   }
 }
+.setting-button {
+  padding: 9px 75px;
+  font-size: 20px;
+  color: #6f42c1;
+  background: #fff;
+  border: #6f42c1 1px solid;
+  border-radius: 45px;
+  outline: none;
+  cursor: pointer;
+  margin: 25px;
+  transition: all ease 0.3s;
+}
+.setting-button:hover {
+  background-color: #6f42c1;
+  color: #fff;
+}
+.setting-button--position {
+  display: flex;
+  justify-content: center;
+}
 
 .checkbox-row {
   display: flex;
@@ -20,6 +40,20 @@
 .checkbox-row .search-text {
   margin: 0;
   cursor: pointer;
+}
+
+.checkbox-row {
+  width: 300px;
+}
+@media (max-width: 600px) {
+  .checkbox-row {
+    width: 200px;
+  }
+}
+@media (max-width: 475px) {
+  .checkbox-row {
+    width: 150px;
+  }
 }
 
 .checkbox {
@@ -98,7 +132,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: flex-start;
-  padding: 15px 0;
+  padding: 15px 15px;
 }
 .setting-item-name {
   width: 40%;
@@ -166,6 +200,10 @@
   .setting-item-network {
     padding-left: 30px;
   }
+}
+
+.filter-text {
+  font-style: italic;
 }
 
 /*# sourceMappingURL=Setting.module.css.map */
