--- a/src/components/Profile/ProfileInformation/Setting/Setting.module.scss
+++ b/src/components/Profile/ProfileInformation/Setting/Setting.module.scss
@@ -4,6 +4,28 @@
   @media (max-width: 768.999px) {
     font-size: 15px;
   }
+  &-button {
+    padding: 9px 75px;
+    font-size: 20px;
+    color: #6f42c1;
+    background: #fff;
+    border: #6f42c1 1px solid;
+    border-radius: 45px;
+    outline: none;
+    cursor: pointer;
+    margin: 25px;
+    transition: all ease .3s;
+
+    &:hover {
+      background-color: #6f42c1;
+      color: #fff;
+    }
+
+    &--position {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
 
 .checkbox-row {
@@ -15,9 +37,33 @@
   padding: 10px 0;
 }
 
+//.checkbox-primary {
+//  padding: 10px 0 10px 20px;
+//  width: 300px;
+//  @media (max-width: 600px) {
+//    width: 200px;
+//  }
+//
+//  @media (max-width: 475px) {
+//    width: 150px;
+//  }
+//}
+
 .checkbox-row .search-text {
   margin: 0;
   cursor: pointer;
+}
+
+.checkbox-row {
+  width: 300px;
+
+  @media (max-width: 600px) {
+    width: 200px;
+  }
+
+  @media (max-width: 475px) {
+    width: 150px;
+  }
 }
 
 .checkbox {
@@ -99,7 +145,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: flex-start;
-  padding: 15px 0;
+  padding: 15px 15px;
 
   &-name {
     width: 40%;
@@ -135,7 +181,6 @@
     font-size: 15px;
     width: 300px;
     height: 100px;
-    //overflow: hidden;
     resize: none;
     border-radius: 25px;
     border: #f6f6f6 1px solid;
@@ -169,4 +214,8 @@
       padding-left: 30px;
     }
   }
+}
+
+.filter-text {
+  font-style: italic;
 }
