--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -9,14 +9,15 @@
 }
 
 .user {
+  width: 300px;
   border: 1px solid #cccccc;
   border-radius: 10px;
   background-color: white;
-  box-shadow: 3px 3px 5px 0 #a1a1a1;
   margin: 0 15px 20px;
   padding: 15px 50px;
   align-items: center;
   justify-content: space-between;
+  box-sizing: border-box;
 }
 .userInfo {
   text-align: center;
@@ -39,11 +40,15 @@
   background-color: #2c2f3b;
   color: #fff;
 }
+.user-container {
+  margin: 0 auto;
+  width: 750px;
+}
 
 .flex {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
 }
 
 /*# sourceMappingURL=users.module.css.map */
