--- a/src/App.css
+++ b/src/App.css
@@ -23,4 +23,14 @@
   }
 }
 
+.bg {
+  position: fixed;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+  transition: all ease 0.3s;
+}
+
 /*# sourceMappingURL=App.css.map */
