--- a/src/App.scss
+++ b/src/App.scss
@@ -24,3 +24,13 @@
     justify-content: center;
   }
 }
+
+.bg {
+  position: fixed;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .3);
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+  transition: all ease .3s;
+}
