--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -26,7 +26,13 @@
   text-decoration: none;
   display: flex;
   align-items: center;
+  justify-content: center;
   transition: all ease 0.3s;
+}
+@media (max-width: 768.999px) {
+  .nav .link {
+    justify-content: left;
+  }
 }
 .nav .link-logo-name {
   width: 45%;
