--- a/src/components/Profile/ProfileHeader/ProfileHeader.module.css
+++ b/src/components/Profile/ProfileHeader/ProfileHeader.module.css
@@ -68,7 +68,7 @@
   width: 30px;
 }
 .information-nav-element {
-  padding: 20px 0 20px 30px;
+  padding: 20px 15px 20px;
   cursor: pointer;
 }
 .information-nav-element:hover .information-nav-name {
